Fix problem with overflowing captions on new gallery block format

--- a/packages/block-library/src/gallery/style.scss
+++ b/packages/block-library/src/gallery/style.scss
@@ -52,9 +52,9 @@
 			font-size: $default-font-size;
 			left: 0;
 			margin-bottom: 0;
-			max-height: 100%;
+			max-height: 38%;
 			overflow: auto;
-			padding: 40px 10px 9px;
+			padding: 0 0 8px;
 			position: absolute;
 			text-align: center;
 			width: 100%;
